# Swordfish

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Configuration.h  Configuration_adv.h  Version.h.in  generate_version  makeuf2.sh  samd51p20a_flash.ld
src/: CMakeLists.txt
src/HAL/: CMakeLists.txt
src/HAL/SAMD51/: CMakeLists.txt  HAL.h  MarlinSerial_AGCM4.cpp  MarlinSerial_AGCM4.h  RS485.cpp  endstop_interrupts.h  fastio.h  pinsDebug.h  watchdog.cpp
src/HAL/shared/: CMakeLists.txt  Marduino.h  progmem.h
src/core/: language.h  macros.h  millis_t.h  serial.h  types.h
src/feature/: binary_stream.h  e_parser.h  pause.cpp  spindle_laser.h
src/gcode/: gcode.cpp  queue.cpp
src/gcode/calibrate/: G28.cpp
src/gcode/control/: G10_G11.cpp  M111.cpp  M17_M18_M84.cpp  M3-M5.cpp  M6.cpp  M7-M9.cpp  M810-M819.cpp  M999.cpp  T.cpp
src/gcode/eeprom/: CMakeLists.txt
src/gcode/geometry/: CMakeLists.txt  G92.cpp  M206_M428.cpp
src/gcode/host/: CMakeLists.txt  M113.cpp  M114.cpp
src/gcode/motion/: G2_G3.cpp  G4.cpp
src/gcode/probe/: G38.cpp
src/gcode/sd/: M1001.cpp  M24_M25.cpp
src/gcode/stats/: CMakeLists.txt  M31.cpp
src/gcode/units/: CMakeLists.txt  G20_G21.cpp
src/inc/: Conditionals_post.h
src/lcd/: CMakeLists.txt
src/lcd/language/: CMakeLists.txt
src/libs/: CMakeLists.txt  modbus.h
src/libs/rtt/: CMakeLists.txt  RTTSerial.h
src/marlin/: CMakeLists.txt  MarlinCore.cpp  MarlinCore.h
src/marlin/HAL/SAMD51/: HAL.cpp  MarlinSerial_AGCM4.h  RS485.h  eeprom_qspi.cpp  endstop_interrupts.h  watchdog.h
src/marlin/HAL/shared/: Delay.h  eeprom_api.h
src/marlin/core/: CMakeLists.txt  boards.h  debug_section.h  drivers.h  language.h  macros.h  serial.cpp  serial.h  types.h  utility.cpp
src/marlin/feature/: CMakeLists.txt  binary_stream.cpp  host_actions.cpp  host_actions.h  spindle_laser.cpp  spindle_laser_types.h
src/marlin/gcode/: CMakeLists.txt  gcode.cpp  gcode.h  parser.cpp  parser.h  queue.cpp  queue.h
src/marlin/gcode/calibrate/: CMakeLists.txt  G28.cpp  M48.cpp
src/marlin/gcode/config/: CMakeLists.txt  M2000.cpp  M201-M205.cpp  M220.cpp  M221.cpp  M222.cpp  M43.cpp  M92.cpp
src/marlin/gcode/control/: CMakeLists.txt  G10_G11.cpp  M0_M1.cpp  M111.cpp  M17_M18_M84.cpp  M2001.cpp  M211-M213.cpp  M3-M5.cpp  M400.cpp  M6.cpp  M80_M81.cpp  M82_M86.cpp  T.cpp
src/marlin/gcode/geometry/: CMakeLists.txt  G17-G19.cpp  G43_G49.cpp  G53-G59.cpp  G92.cpp  G93-G94.cpp  M206_M428.cpp
src/marlin/gcode/host/: CMakeLists.txt  M115.cpp  M117.cpp
src/marlin/gcode/motion/: CMakeLists.txt  G0_G1.cpp  G2_G3.cpp
src/marlin/gcode/probe/: CMakeLists.txt  G37.cpp  G38.cpp
src/marlin/gcode/sd/: CMakeLists.txt
src/marlin/gcode/stats/: M75-M78.cpp
src/marlin/inc/: CMakeLists.txt  Conditionals_LCD.h  Conditionals_adv.h  Conditionals_post.h  SanityCheck.h
src/marlin/lcd/language/: language_en.h
src/marlin/libs/: modbus.cpp  vector_3.h
src/marlin/libs/rtt/: RTTSerial.cpp  SEGGER_RTT_Conf.h
src/marlin/module/: CMakeLists.txt  endstops.cpp  endstops.h  estop.h  motion.cpp  motion.h  planner.cpp  planner.h  printcounter.cpp  settings.cpp  stepper.cpp  stepper.h  temperature.cpp  temperature.h
src/marlin/module/stepper/: CMakeLists.txt  indirection.cpp  indirection.h
src/marlin/pins/: pinsDebug.h  pinsDebug_list.h  pins_postprocess.h  sensitive_pins.h
src/marlin/pins/samd/: pins_boardinator.h
src/marlin/sd/: cardreader.cpp
src/module/: motion.cpp  motion.h  probe.cpp  temperature.cpp  temperature.h
src/module/stepper/: indirection.cpp
src/pins/: CMakeLists.txt  pins.h  pins_postprocess.h
src/pins/samd/: pins_boardinator.h
src/sd/: CMakeLists.txt  cardreader.h
src/swordfish/: CMakeLists.txt  Controller.cpp  Controller.h  Exception.cpp  Exception.h  Module.cpp  Module.h  PersistentStore.h  debug.cpp  debug.h  macros.h  math.h  types.h
src/swordfish/core/: Array.h  Boundary.h  CMakeLists.txt  Console.cpp  Console.h  DuplicateIndexException.cpp  DuplicateIndexException.h  FormatException.cpp  FormatException.h  ISR.cpp  ISR.h  InvalidOperationException.cpp  InvalidOperationException.h  ListPack.h  Object.cpp  Object.h  ObjectList.h  Pack.cpp  Pack.h  Schema.h  String.cpp  String.h  ValueArray.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/swordfish/data/: CMakeLists.txt  Record.h  Table.cpp  Table.h
src/swordfish/io/: CMakeLists.txt  ConsoleOutputStream.cpp  ConsoleOutputStream.h  InputStream.h  OutputStream.h  Reader.h  Seekable.h  StringOutputStream.cpp  StringOutputStream.h  WrappingInputStream.h  WrappingOutputStream.h  Writer.cpp  Writer.h
src/swordfish/json/: CMakeLists.txt  Reader.h
src/swordfish/modules/: CMakeLists.txt
src/swordfish/modules/estop/: CMakeLists.txt  EStopException.cpp  EStopException.h  EStopModule.cpp  EStopModule.h
src/swordfish/modules/gcode/: CMakeLists.txt  CommandException.cpp  CommandException.h
src/swordfish/modules/gpio/: CMakeLists.txt  GPIOModule.cpp  GPIOModule.h  Pin.cpp  Pin.h  PinTable.cpp  PinTable.h
src/swordfish/modules/motion/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystemTable.cpp  CoordinateSystemTable.h  FeedRate.h  LimitException.cpp  LimitException.h  Limits.cpp  Limits.h  MotionModule.cpp  MotionModule.h  NotHomedException.cpp  NotHomedException.h
src/swordfish/modules/status/: CmakeLists.txt  Color.cpp  Color.h  StatusModule.cpp  StatusModule.h  WS2812Driver.cpp  WS2812Driver.h
src/swordfish/modules/tools/: CMakeLists.txt  Driver.cpp  Driver.h  DriverException.cpp  DriverException.h  DriverParameter.cpp  DriverParameter.h  DriverParameterDefinition.h  DriverParameterTable.cpp  DriverParameterTable.h  DriverTable.cpp  DriverTable.h  IDriver.cpp  IDriver.h  Pocket.cpp  Pocket.h  PocketTable.cpp  PocketTable.h  Tool.cpp  Tool.h  ToolGeometry.cpp  ToolGeometry.h  ToolTable.cpp  ToolTable.h  ToolsModule.cpp  ToolsModule.h
src/swordfish/trace/: CMakeLists.txt  handlers.cpp
src/swordfish/trace/rtt/: ControlBlock.h  (+1 more)
src/swordfish/utils/: CMakeLists.txt  Flags.h  List.h  NotCopyable.h  NotMovable.h  TypeInfo.h
(+30 files in other folders)
